# data-analyst-agent

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CADRAGE.md  spike-vanna.md
docs/conversations-demo/3d51ec6df3b840afbd36403a7a9ecde7/: context.json  manifest.json  resultat_1.csv  transcript.json
docs/conversations-demo/59618d53b7e14e26803ec69aaab50b05/: context.json  manifest.json  resultat_1.csv  resultat_4.csv  transcript.json
docs/conversations-demo/ae50fb985ca3423084d702aed80bc11e/: context.json  manifest.json  resultat_2.csv  transcript.json
docs/conversations-demo/c71e847539524f35b6a146ec4d8ec675/: context.json  manifest.json  resultat_1.csv  transcript.json
docs/conversations-demo/demo-ca-1784705380/: context.json  manifest.json  resultat_2.csv  resultat_4.csv  transcript.json
docs/conversations-demo/demo-jours-1784705735/: context.json  manifest.json  resultat_1.csv  resultat_2.csv  resultat_3.csv  transcript.json
docs/conversations-demo/demo-prevision-1784705627/: context.json  manifest.json  resultat_1.csv  transcript.json
docs/conversations-demo/demo-univers-1784705489/: context.json  manifest.json  resultat_2.csv  resultat_3.csv  transcript.json
docs/conversations-demo/f505343671c54f5babab18ffa1ba77d1/: context.json  manifest.json  resultat_1.csv  resultat_2.csv  transcript.json
models/: california_housing.joblib  iris.joblib  maxizoo_sales.joblib  registry.yaml  titanic.joblib
notebooks/: train_california.ipynb  train_california.md  train_iris.ipynb  train_iris.md  train_maxizoo_sales.ipynb  train_maxizoo_sales.md  train_titanic.ipynb  train_titanic.md
scripts/: extract_maxizoo_mini.py  live_scenarios.py  load_maxizoo_duckdb.py  seed_titanic_postgres.py
sources/: catalogue.yaml
src/data_analyst_agent/: __init__.py  config.py  llm.py
src/data_analyst_agent/agents/: __init__.py
src/data_analyst_agent/agents/analysis/: __init__.py  agent.py
src/data_analyst_agent/agents/inference/: __init__.py  predict.py  registry.py  validation.py
src/data_analyst_agent/agents/inference/schemas/: __init__.py  california.py  iris.py  maxizoo_sales.py  titanic.py
src/data_analyst_agent/agents/retrieval/: __init__.py  agent.py  catalog.py  duckdb_excel.py  duckdb_source.py  sql.py
src/data_analyst_agent/api/: __init__.py  app.py
src/data_analyst_agent/orchestrator/: __init__.py  conversations.py  graph.py  plan.py  workspace.py
src/data_analyst_agent/sandbox/: __init__.py  client.py
src/data_analyst_agent/sandbox/image/: Dockerfile  bridge.py  requirements.in  requirements.txt
tests/: conftest.py
tests/e2e/: test_golden_scenarios.py  test_page_chat.py
tests/fakes/: fake_bridge.py
tests/fixtures/maxizoo_mini/: inflation.csv  products.csv  promo_calendar.csv  promo_scope.csv  sales_daily.csv  sales_hourly.csv  store_hours.csv  stores.csv  traffic_daily.csv  weather.csv
tests/helpers/: doubles.py  maxizoo.py  scripted_llm.py  titanic.py
tests/integration/: test_analysis_integration.py  test_inference_real_models.py  test_llm_live.py  test_postgres_retrieval.py  test_sandbox_docker.py
tests/unit/: test_live_scenarios.py  test_llm.py  test_package.py
tests/unit/agents/: test_analysis_agent.py
tests/unit/api/: test_app.py
tests/unit/inference/: test_registry_predict.py  test_validation.py
tests/unit/orchestrator/: test_conversations.py  test_graph.py  test_workspace.py
tests/unit/retrieval/: test_agent.py  test_catalog.py  test_duckdb_excel.py  test_duckdb_source.py  test_retrieval_agent.py  test_sql_readonly.py
tests/unit/sandbox/: test_client.py  test_config.py  test_docker_command.py
