[project]
name = "data-analyst-agent"
version = "0.1.0"
description = "Agent conversationnel sur données (on-premise) : requêtes SQL, auto-stats et visualisations en sandbox, inférence ML gardée"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "fastapi>=0.139.0",
    "joblib>=1.5.3",
    "langgraph>=1.2.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pg8000>=1.31.5",
    "pydantic>=2.13.4",
    "pydantic-ai-slim[openai]>=2.7.0",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.13"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    # parseur JS (BSD) : valide le script de la page de chat, servie comme une
    # chaîne Python où un échappement raté casserait tout le script sans bruit.
    "esprima>=4.0.1",
    "jupytext>=1.19.4",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "testcontainers[postgres]>=4.14.2",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle — erreurs
    "W",   # pycodestyle — warnings
    "F",   # pyflakes
    "I",   # isort — tri des imports
    "UP",  # pyupgrade — syntaxe moderne
    "B",   # bugbear — pièges courants
    "SIM", # simplifications
    "C4",  # compréhensions
    "PT",  # style pytest
    "RUF", # règles spécifiques ruff
]

[tool.coverage.run]
# bridge.py s'exécute DANS le conteneur sandbox : couvert par les tests
# d'intégration à travers le protocole, invisible pour coverage côté hôte.
omit = ["*/sandbox/image/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "-m 'not live' --strict-markers --cov=data_analyst_agent --cov-report=term-missing --cov-fail-under=85"
markers = [
    "integration: tests d'intégration (Docker, testcontainers, sandbox réelle)",
    "e2e: scénarios golden de bout en bout",
    "live: nécessite le LLM local (Ollama), exclu par défaut et en CI",
]
filterwarnings = [
    # libs tierces, rien à corriger chez nous :
    # pydantic-graph appelle asyncio.get_event_loop() (déprécié py3.12)
    "ignore:There is no current event loop:DeprecationWarning",
    # joblib assigne .shape au chargement des pickles (déprécié NumPy 2.5)
    "ignore:Setting the shape on a NumPy array:DeprecationWarning",
]
